* Did a little fixing to show icon command

* Added report command (only works with images, gifs, and videos)

* Added useful functions to index.js 

* Added report channel id to config

12/12/2019 (UTC+7)